--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,17 +28,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/jquery-ui.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/aos.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
-
-    <link rel="stylesheet" href="css/aos.css">
-
-    <link rel="stylesheet" href="css/style.css">
     <title>React App</title>
   </head>
   <body>
